# prime_ye_xiaokuan

./: README.md
prime_xy2598/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
prime_xy2598/docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
prime_xy2598/docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
prime_xy2598/docs/_build/doctrees/autoapi/: index.doctree
prime_xy2598/docs/_build/doctrees/autoapi/prime_xy2598/: index.doctree
prime_xy2598/docs/_build/doctrees/autoapi/prime_xy2598/prime_xy2598/: index.doctree
prime_xy2598/docs/_build/html/: changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
prime_xy2598/docs/_build/html/_sources/: example.ipynb.txt
prime_xy2598/docs/_build/html/_sources/autoapi/: index.rst.txt
prime_xy2598/docs/_build/html/_sources/autoapi/prime_xy2598/: index.rst.txt
prime_xy2598/docs/_build/html/_sources/autoapi/prime_xy2598/prime_xy2598/: index.rst.txt
prime_xy2598/docs/_build/html/autoapi/: index.html
prime_xy2598/docs/_build/html/autoapi/prime_xy2598/: index.html
prime_xy2598/docs/_build/html/autoapi/prime_xy2598/prime_xy2598/: index.html
prime_xy2598/docs/_build/jupyter_execute/: example.ipynb
prime_xy2598/src/prime_xy2598/: __init__.py  prime_xy2598.py
prime_xy2598/tests/: __init__.py  test_prime_xy2598.py
