[tool.poetry]
name = "prime_xy2598"
version = "0.1.0"
description = "A Python package developed by Xiaokuan Ye, identifing a prime"
authors = ["XiaoKuan Ye"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx-autoapi = "3.x"
myst-nb = "1.0.0rc0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
